[gd_scene load_steps=4 format=3 uid="uid://cj5x6fgps4nli"]

[ext_resource type="Script" uid="uid://bdvo41vna6nrt" path="res://scenes/menus/high scores/high_scores.gd" id="1_pm6h4"]
[ext_resource type="Texture2D" uid="uid://c6qybrpe322oo" path="res://assets/high_scores.png" id="2_1rg40"]
[ext_resource type="Theme" uid="uid://8n7hmf7q53wo" path="res://assets/themes/dynapuff.tres" id="3_i8bdw"]

[node name="HighScores" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pm6h4")
prev_scene = "res://scenes/menus/main menu/main_menu.tscn"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(480, 270)
texture = ExtResource("2_1rg40")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
offset_right = 960.0
offset_bottom = 540.0
color = Color(0, 0, 0, 0.490196)

[node name="HighScoreLabel" type="Label" parent="CanvasLayer"]
offset_left = 240.0
offset_top = 130.0
offset_right = 740.0
offset_bottom = 190.0
theme = ExtResource("3_i8bdw")
text = "High Score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OnlineHighScoreLabel" type="Label" parent="CanvasLayer"]
offset_left = 240.0
offset_top = 240.0
offset_right = 740.0
offset_bottom = 365.0
theme = ExtResource("3_i8bdw")
text = "Online High Scores 
Coming Soon!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="Button" parent="CanvasLayer"]
custom_minimum_size = Vector2(500, 100)
offset_left = 240.0
offset_top = 420.0
offset_right = 740.0
offset_bottom = 520.0
theme = ExtResource("3_i8bdw")
text = "Back"

[connection signal="pressed" from="CanvasLayer/BackButton" to="." method="_on_back_button_pressed"]
